# Digo

./: .gitignore  .gitmodules  .travis.yml  DEBUG.md  Makefile  README.md  all.ll  ast.cmi  ast.mli  calc.ml  executable  linker-test.ll  parser.cmi  parser.ml  parser.mli  parser.mly  parser.output  printer.ml  run-master.sh  run-worker.sh  scanner.mll  test.ll  test.ll.output
.circleci/: config.yml
async-remote-lib/: .gitignore  CMakeLists.txt  Makefile  README.md  async.cpp  async.h  linker_common.h  linker_reserved.c  main.cpp  network.cpp  network.h
async-remote-lib/src/: CmakeLists.txt  Makefile  async.cpp  async.h  common.h  dslice.cpp  dslice.h  dstring.cpp  dstring.h  ioutil.cpp  ioutil.h  linker_common.h  linker_reserved.c  main.cpp  master.h  master_worker.cpp  master_worker.h  network.cpp  network.h  print.c  worker.h
async-remote-lib/test/: CMakeLists.txt  async_test.cpp  dslice_test.cpp  dstring_test.cpp  ioutil_test.cpp  main.cpp  mrwk_test.cpp  network_test.cpp  print_test.cpp
demo/: book2.txt  book3.txt  haskell_book_chapter2.txt  wordcount.digo
digo-compiler/: DEBUG.md  Makefile  README.md  ast.ml  ast.mli  codegen.ml  digo.ml  hello_world.ll  metadata_gen.ml  parser.mly  printer.ml  sast.ml  scanner.mll  semant.ml  semant.native  tmp_metadata_gen.ml
digo-linker/: CMakeLists.txt  Makefile  README.md  exported_api.ll  metadata_template.ll  serializer_template.ll
digo-linker/src/: auto_gc.cpp  auto_gc.h  builtin_type_wrapper.cpp  builtin_type_wrapper.h  builtin_types.h  common.h  gc.cpp  gc.h  gc_exported.cpp  linker_main.cpp  main.cpp  metadata.cpp  metadata.h  print_funcs.cpp  serialization.cpp  serialization.h  serialization_wrapper.cpp  serialization_wrapper.h  serializer_template.cpp  wrapper.cpp  wrapper.h
digo-linker/test/: test-async-1.expected  test-async-1.ll  test-async-2.ll  test-async-3.ll  test-remote-1.ll
digo-test/: Makefile  README.md  run_tests.sh  testall.sh
test/: test-basic-1.digo  test-bool-literal1.digo  test-builtin-funcs.digo  test-float-literal1.digo  test-operations-2.digo  test-slice-1.digo  test-slice.digo  test-wordcount.digo  test-wordcount.output  test1.digo  test2.digo  (+1 more)
(+181 files in other folders)
